feat: 현재 학기 설정 (#172)
* feat: 현재 학기 설정

* feat: 학기 정보도 정렬 기준에 포함

* refactor: 안 쓰는 메서드 삭제

* feat: 학기 중복 생성시 예외처리

* refactor: 존재하지 않는 학기에 대한 예외명을 명확히 수정

* docs: API 문서 업데이트

* fix: 예외처리시 응답 상태 포함

* refactor: 클래스 레퍼런스 사용

* fix: 예외처리 컨트롤러 추가
